tests/approval/snapshots/approval_sqlite__server_info.snap
---
source: tests/approval/sqlite.rs
expression: info
---
{
  "protocolVersion": "2025-06-18",
  "capabilities": {
    "tools": {}
  },
  "serverInfo": {
    "name": "database-mcp-server",
    "version": "[version]"
  },
  "instructions": "Database MCP Server - provides database exploration and query tools for SQLite"
}
